# claude-code-openai-wrapper

./: .env.example  .gitignore  Cargo.toml  Dockerfile.rust  README.md  docker-compose.rust.yml  install.sh
docs/: CLAUDE_CODE_CLI_REFERENCE.md  using-claude-opus-4-6.md
src/: config.rs  constants.rs  error.rs  main.rs
src/assets/: landing.html
src/handlers/: auth_status.rs  chat.rs  compatibility.rs  debug.rs  health.rs  landing.rs  mcp.rs  messages.rs  mod.rs  models.rs  sessions.rs  tools.rs
src/middleware/: debug_logging.rs  mod.rs  request_id.rs  request_size.rs
src/models/: anthropic.rs  mcp.rs  mod.rs  openai.rs  session.rs  tool.rs
src/services/: auth.rs  claude_cli.rs  content_filter.rs  mcp_client.rs  message_adapter.rs  mod.rs  parameter_validator.rs  rate_limiter.rs  session_manager.rs  tool_manager.rs
