[package]
name = "claude-code-openai-wrapper"
version = "2.2.0"
edition = "2021"
description = "OpenAI-compatible API wrapper for Claude Code"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "limit"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
governor = "0.8"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1"
once_cell = "1"
rand = "0.8"
futures = "0.3"
async-stream = "0.3"
http = "1"
bytes = "1"
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
